--- a/Conference Paper/Paper_Summary.tex
+++ b/Conference Paper/Paper_Summary.tex
@@ -63,13 +63,19 @@ Even though the issue regarding data security and its integrity in mobile applic
 The current ecosystem of mobile advertising involves three major members: the publishers who own a mobile application and who desire to display ads in their software to make revenue, the advertisers who pay to get their content advertised, and the ad networks which serve as intermediate platforms that bridge the connection between the first two members. To integrate the ad network mechanism developers must include one or more pre-compiled ad libraries provided by ad network companies. These libraries and their necessary dependencies are generally implemented in Java and come in the form of compiled jar files. After importing the libraries, programmers can interact with them using specific APIs. Most ad networks provide a rich API surface which allows developers to customize the visual aspects of the ads they are displaying. Additionally, relevant stakeholders need to create an account on the ad network’s website to set up the payment credentials and individual preferences (suitable ad contents, desired ad frequency, layout, format, and others). 
 
 \subsection{Mobile Ad Classification and Aggressiveness}
-Advertisements within mobile applications can be displayed in many different forms. The Conference Paper labels each Ad type by their Aggressiveness and their Format. The aggressiveness of any type of mobile ad is defined by how invasive and unpleasant to the user it is. For the types that can be ignored, skipped or closed, the article labels their aggressiveness as being “Low”. On the other hand for those that are more invasive, their aggressiveness falls into the “High” category. According to the piece of writing, Ad Networks support many different ad formats and the ability to decide whichever configuration would suit the best is a quality that any Mobile Developer should possess. After carefully analyzing distinct Ad Networks and their different formats, the authors have decided that classifying the Ads would be the most convenient option. The Research paper categorizes mobile ad in 5 main different types: Offerwall, Popup, Notification, Floating ,and lastly, Embedded.
-To begin with, Offerwall is the class of ad that is considered to be one of the most invasive. That is why his aggressiveness is considered to be High. Offerwall uses a reappearing page that offers the client in-app rewards in exchange for completing determined actions (i.e. downloading other apps or watching videos). It often interrupts app’s behavior and cannot be ignored, skip or closed, reason why is considered aggressive. 
-Secondly, Notification displays its ad contents the same way that a regular app would display a notification on the mobile device. The main difference between this ad format and the others is that it will still be running even when the app is closed. The advantage for the ad networks of this type is that the notification will be displayed using the same ringtone than other apps tricking the user to look at the mobile device. On the other hand, the disadvantage is that it can distract the user or even interrupt the use of other apps. That is why Notification type is consider to have a High Aggressiveness.
-Not all the Ad types are invasive to the user, the research paper categorizes the following 3 Ad type to have Low Aggressiveness.
-As its name suggests, Popup type displays a pop-up window in front of the app’s GUI. Popups can take the form of many different sizes and they can even take up the full screen if necessary. Although this type of Ad format could be unpleasant to the user, the research paper categorizes its Aggressiveness as Low. Even though Popups may be invasive and interrupt the app’s behaviour, they can be easily closed by the user. 
-Although the Floating type of ad is not very common, it is relevant to the study of different Ad Formats. This category of ad appear in front of GUI of the app with a floating window (why its name). Since it does not often occupy a large portion of the screen, and also can be skipped or closed, the Article categorizes its Aggressiveness as Low. 
-Last but not least, the Embedded type of Ad is considered to be the least aggressive format among the others. This Ad Type embeds advertisement content into a small window of the app. It can be displayed in many different ways, such as banner, video and etc. The ads displayed this way usually are very small and do not interrupt the flow of the app. They can also be ignored, skipped or closed.
+Advertisements within mobile applications can be displayed in many different forms. The Conference Paper labels each ad type based on its Aggressiveness and its Format. The Aggressiveness of a mobile ad is defined by establishing how invasive and unpleasant it is to the user. For the types that can be ignored, skipped or closed, the article labels their Aggressiveness as being “Low”. On the other hand for those that are more invasive, their Aggressiveness falls into the “High” category. According to the piece of writing, Ad Networks support many different ad formats. Deciding which configuration would suit the best is a quality that any mobile developer should possess. After carefully analyzing distinct ad networks and their different available formats, the authors have decided that classifying the ads would be the most convenient option. The research paper categorizes mobile ads in 5 main different types: Offerwall, Notification, Popup, Floating, and Embedded.
+
+Offerwall is a type of ad that is considered to be one of the most invasive. Offerwall uses a reappearing page that offers to end user in-app rewards in exchange for completing certain tasks (i.e. downloading other apps or watching videos). It often interrupts the app’s behavior and cannot be ignored, skipped or closed. That is why its Aggressiveness is considered to be High. 
+
+Notification displays its ad content the same way that a regular app would display a notification on the mobile device. The main difference between this ad format and the others is that it will still be running even when the app is closed. The advantage for the ad networks using this type is that the notification will be displayed using the same ringtone as other apps, deceiving the user to look at the mobile device. On the other hand, the disadvantage is that it can distract the user or even interrupt the use of other apps. That is why Notification type is consider to be Highly Aggressive.
+
+Not all ad types are invasive to the user, the research paper categorizes the following 3 ad types as having Low Aggressiveness.
+
+As its name suggests, Popup type displays a pop-up window in front of the app’s GUI. Popups can be different forms or sizes and they can even take up the full screen if necessary. Although this type of ad could be unpleasant to the user, the study describes its Aggressiveness as Low. Even though Popups may be invasive and interrupt the app’s behavior, they can be easily closed by the user. 
+
+Although the Floating type of ad is not very common, it is relevant to the study of different ad Formats. This type of ad appears in front of GUI as a floating bubble. Since it does not occupy a large portion of the screen, and also can be skipped or closed, the research categorizes its Aggressiveness as Low. 
+
+The Embedded ad is considered to be the least Aggressive Format among the others. This type embeds advertisement content into a small window inside of the app. It can be displayed in many different ways, such as banner, video and etc. The ads displayed this way usually are very small and do not interrupt the flow of the app. They can also be ignored, skipped or closed.
 
 
 \section{Methodology}
@@ -83,7 +89,7 @@ The authors created MAdLens system (Fig. \ref{fig:system} ) which can identify i
 \section{Data Analysis and Results}
 The research paper revealed multiple useful discoveries regarding mobile ads for Android applications. Developers may want to pay attention to the different implications that the authors have concluded after conducting a large-scale measurement study. There are 8 crucial implications which arose during the analysis:
 \begin{itemize}
-\item Due to the rise of different ad networks, developers have many different choices when it comes to determine ad placement in their apps. However, most developers take a more conservative approach when it comes to ads: 71\% of apps contain at most one ad library.
+\item Due to the rise of different ad networks, developers have many different choices when it comes to determining ad placement in their apps. However, most developers take a more conservative approach when it comes to ads: 71\% of apps contain at most one ad library.
 \item When it comes to choosing Ad types, programmers tend to choose Low-Aggressive ad types: Embedded and Popup. They are present in more than half of the analyzed apps. In contrast, the most aggressive types of Ads, Offerwall and Notification, are the least used ad types.
 \item The number of Ads in an app is directly correlated with the type of category that app belongs to. The research paper affirms that business or utility apps are much less likely to have ads compared to apps that fall into the category of entertainment or casual.
 \item According to the percentage of apps accommodating at least three types of ads, the research paper concludes that the two slightly aggressive ad types, Embedded and Popup, are the most popular among all the different categories. Although Offerwall is the most aggressive type of ad, it is relatively popular. The paper suggests that developers should consider using these three main ad types in their apps to increase their profits.
@@ -96,7 +102,7 @@ The research paper revealed multiple useful discoveries regarding mobile ads for
 MAdLens takes the static approach of analyzing and extracting the APIs from Android applications. Therefore, it has the inherited limitations of static analysis. The system counts the number of occurrences of various APIs at a specific time and because of the code control flow, some portions of the code are not necessarily executed. Thus, investigated apps could have had additional ads which were not captured by the system because they were not displayed when the experiment was conducted. There are dynamic approaches which can inspect an app’s run-time behavior, but these are still very challenging to implement at a large scale. A viable alternative proposed in the paper was a dynamic solution based on image recognition techniques to identify ad activities on the user interface. However, this option was left by the authors for future work as it required significant additional research.
 
 \section{Conclusion}
-The analyzed paper represents one major step forward for the in-app advertising industry. It manages to fill in a gap caused by the lack of theoretical knowledge by providing insights for developers about how to optimize their app monetization with optimal ad placement choices. The authors collected 277,616 Android apps belonging to more than 48 categories and performed a comprehensive exploration before coming up with valuable results. These findings are be able guide any mobile app programmer into Android in-app ad best practice.
+The analyzed paper represents one major step forward for the in-app advertising industry. It manages to fill in a gap caused by the lack of theoretical knowledge by providing insights for developers about how to optimize their app monetization with optimal ad placement choices. The authors collected 277,616 Android apps belonging to more than 48 categories and performed a comprehensive exploration before coming up with valuable results. These findings are able guide any mobile app programmer into Android in-app ad best practice.
 
 
 
